--- a/tamplete assignment/style.css
+++ b/tamplete assignment/style.css
@@ -120,7 +120,7 @@
 
 .About p {
     margin-left: 20px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
 }
 
@@ -193,7 +193,7 @@ form {
 
 
 .contacts h1 {
-    margin: 40px 0px 50px 70px;
+    margin: 40px 0px 40px 70px;
     font-size: 25px;
     font-weight: 100;
 }
@@ -217,4 +217,14 @@ form {
     margin-top: 20px;
     width: 100%;
     height: auto;
+}
+
+footer {
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 20px;
+    width: 100%;
+    height: 40px;
+    background: black;
+    color: white;
 }
