--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -125,3 +125,35 @@ main {
     width: 540px;
     margin-left: 20px;
 }
+
+.services {
+    box-sizing: inherit;
+    width: 100%;
+    margin-left: 30px;
+
+
+}
+
+.services h1 {
+    margin-top: 40px;
+    font-size: 48px;
+    color: #f44336;
+    margin-bottom: 30px;
+}
+
+.services h2 {
+    height: 10px;
+    width: 60px;
+    background: #f44336;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.services p {
+    width: 1100px;
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    height: 220px;
+    line-height: 25px;
+}
