--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -190,14 +190,46 @@ p {
     margin-top: 20px;
 }
 
+.Packages {
+    box-sizing: inherit;
+    width: 100%;
+    margin-left: 30px;
+
+
+}
+
+.Packages h1 {
+    margin-top: 40px;
+    font-size: 48px;
+    color: #f44336;
+    margin-bottom: 30px;
+}
+
+.Packages h2 {
+    height: 10px;
+    width: 60px;
+    background: #f44336;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.Packages p {
+    width: 1100px;
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    height: 150px;
+    line-height: 25px;
+}
+
 .leftlist {
     height: 600px;
-    width: 400px;
+    width: 500px;
     list-style-type: none;
 
     margin-right: 20px;
 
-    font-size: 2rem;
+    font-size: 16px;
 }
 
 .leftlist ul {
@@ -211,14 +243,14 @@ p {
     border: 1px solid black;
     padding-top: 20px;
     padding-bottom: 20px;
-
+    text-align: center;
 }
 
 .rightlist {
     height: 600px;
-    width: 400px;
+    width: 500px;
     list-style-type: none;
-    font-size: 2rem;
+    font-size: 16px;
 
 }
 
@@ -231,9 +263,15 @@ p {
     border: 1px solid black;
     padding-top: 20px;
     padding-bottom: 20px;
+    text-align: center;
 }
 
 .list {
     display: flex;
     margin-left: 40px;
+}
+
+.list button{
+    width: 500px;
+    height: 60px;
 }
