--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -226,10 +226,12 @@ p {
     height: 600px;
     width: 500px;
     list-style-type: none;
-
     margin-right: 20px;
-
     font-size: 16px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: #f1f1f1;
 }
 
 .leftlist ul {
@@ -240,7 +242,7 @@ p {
 }
 
 .leftlist ul li {
-    border: 1px solid black;
+  
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
@@ -250,8 +252,12 @@ p {
     height: 600px;
     width: 500px;
     list-style-type: none;
+    margin-right: 20px;
     font-size: 16px;
-
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: #f1f1f1;
 }
 
 .rightlist ul {
@@ -260,7 +266,7 @@ p {
 }
 
 .rightlist ul li {
-    border: 1px solid black;
+   
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
@@ -274,4 +280,12 @@ p {
 .list button{
     width: 500px;
     height: 60px;
+}
+.title{
+    height: 70px;
+    font-size: 28px;
+     text-align: center;
+    background: #616161;
+    color: white;
+    
 }
