--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -18,7 +18,6 @@ nav {
     font-size: 20px;
     background-color: #f44336;
     color: white;
-    z-index: 1;
 
 }
 
@@ -271,6 +270,11 @@ p {
     padding-bottom: 10px;
     text-align: center;
 }
+.rightlist ul hr {
+color: aquamarine;
+  background: rgb(241, 127, 127);
+}
+
 
 .list {
     display: flex;
