--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -222,7 +222,7 @@ p {
 }
 
 .leftlist {
-    height: 530px;
+    height: 620px;
     width: 550px;
     list-style-type: none;
     margin-right: 20px;
@@ -231,6 +231,7 @@ p {
     justify-content: center;
     flex-direction: column;
     background: #f1f1f1;
+    margin-bottom: 40px;
 }
 
 .leftlist ul {
@@ -242,13 +243,13 @@ p {
 
 .leftlist ul li {
 
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: center;
 }
 
 .rightlist {
-    height: 530px;
+    height: 620px;
     width: 550px;
     list-style-type: none;
     margin-right: 20px;
@@ -266,8 +267,8 @@ p {
 
 .rightlist ul li {
 
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-align: center;
 }
 .rightlist ul hr {
