--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -48,7 +48,7 @@ nav {
 main {
     margin-left: 330px;
     margin-right: 0px;
-    width: 100%;
+    width: 1100px;
     box-sizing: border-box;
     z-index: 1;
     font-family: "Poppins", sans-serif;
@@ -57,7 +57,9 @@ main {
 .heading {
     height: 240px;
     padding: 20px;
+    width: 100%;
     padding-top: 60px;
+
 
 
 
@@ -303,18 +305,20 @@ p {
 }
 
 .leftlist .title {
-    height: 70px;
+    height: 60px;
     font-size: 28px;
-    text-align: center;
+    
+    padding-top: 40px;
     background: #616161;
     color: white;
 
 }
 
 .rightlist .title {
-    height: 70px;
+    height: 60px;
+    padding-top: 40px;
     font-size: 28px;
-    text-align: center;
+ 
     background: #f44336;
     color: white;
 
