--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -323,3 +323,66 @@ p {
     color: white;
 
 }
+.form {
+    box-sizing: inherit;
+    width: 100%;
+    margin-left: 30px;
+
+
+}
+
+.form h1 {
+    margin-top: 40px;
+    font-size: 48px;
+    color: #f44336;
+    margin-bottom: 30px;
+}
+
+.form h2 {
+    height: 10px;
+    width: 60px;
+    background: #f44336;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.form p {
+    width: 1100px;
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    height: 50px;
+    line-height: 25px;
+}
+
+form{
+    width: 1100px;
+    height: 400px;
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+
+}
+form label{
+    font-size: 28px;
+    height: 40px;
+    padding-top: 20px;
+  box-sizing: border-box;
+    
+}
+form input{
+    border: 1px silver gray;
+}
+
+form input,button{
+    margin-top: 10px;
+    height: 40px;
+    width: 1100px;
+    
+}
+form button{
+    border: 0px;
+    background: #f44336;
+    color:#f1f1f1;
+}
+
+ 
