--- a/Interior Template/style.css
+++ b/Interior Template/style.css
@@ -307,7 +307,7 @@ p {
 .leftlist .title {
     height: 60px;
     font-size: 28px;
-    
+    font-family: "Poppins", sans-serif;
     padding-top: 40px;
     background: #616161;
     color: white;
@@ -318,7 +318,7 @@ p {
     height: 60px;
     padding-top: 40px;
     font-size: 28px;
- 
+    font-family: "Poppins", sans-serif;
     background: #f44336;
     color: white;
 
@@ -332,6 +332,7 @@ p {
 }
 
 .form h1 {
+    font-family: "Poppins", sans-serif;
     margin-top: 40px;
     font-size: 48px;
     color: #f44336;
@@ -339,6 +340,7 @@ p {
 }
 
 .form h2 {
+    font-family: "Poppins", sans-serif;
     height: 10px;
     width: 60px;
     background: #f44336;
@@ -348,6 +350,7 @@ p {
 }
 
 .form p {
+    font-family: "Poppins", sans-serif;
     width: 1100px;
     font-family: "Poppins", sans-serif;
     font-size: 18px;
@@ -365,13 +368,16 @@ form{
 form label{
     font-size: 16px;
     height: 40px;
+    font-family: "Poppins", sans-serif;
     padding-top: 20px;
   box-sizing: border-box;
+  letter-spacing: 1px;
     
 }
 form input{
-    border: 1px silver gray;
+    border: 1px solid rgb(211, 211, 211);
     margin-bottom: 10px;
+    font-family: "Poppins", sans-serif;
 }
 
 form input,button{
@@ -387,5 +393,17 @@ form button{
     color:#f1f1f1;
     font-size: 18px;
 }
-
+footer{
+    height: 120px;
+    width:100%;
+    text-align: end;
+    background: #f1f1f1;
+}
+footer p{
+    font-family: "Poppins", sans-serif;
+    display: inline-block;
+    padding-top: 40px;
+    padding-right: 50px;
+    font-size: 18px;
+}
  
