--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #f0f0f0; /* Changed background color */
+    background-color: #f0f0f0;
 }
 
 .container {
@@ -22,10 +22,12 @@ body {
 }
 
 header {
-    background-color: #333; /* Changed header background color */
-    color: #fff; /* Changed header text color */
-    padding: 30px 0;
-    border-radius: 0 0 20px 20px; /* Added border radius */
+    background-color: #333;
+    color: #fff;
+    padding: 50px 0;
+    border-radius: 0 0 20px 20px;
+    box-sizing: border-box;
+    height: 100%;
 }
 
 header h1 {
@@ -35,6 +37,7 @@ header h1 {
 
 nav {
     float: right;
+    max-width: 400px;
 }
 
 nav a {
@@ -46,7 +49,7 @@ nav a {
 }
 
 nav a.active {
-    color: #ff8c00; /* Changed active link color */
+    color: #ff8c00;
 }
 
 nav a:hover {
@@ -71,7 +74,7 @@ nav a:hover {
 .search-container button {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 40px;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -88,7 +91,7 @@ nav a:hover {
     background-color: #ff6f00;
     padding: 10px 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 20px; /* Added border radius */
+    border-radius: 20px;
 }
 
 .categories {
@@ -121,10 +124,10 @@ nav a:hover {
 }
 
 .product {
-    width: calc(40% - 100px);
+    width: 300px;
     margin-bottom: 20px;
     background-color: #fff;
-    border-radius: 20px; /* Added border radius */
+    border-radius: 20px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     transition: transform 0.5s, box-shadow 0.5s;
@@ -138,7 +141,7 @@ nav a:hover {
 .product img {
     width: 100%;
     height: auto;
-    border-radius: 20px 20px 0 0; /* Added border radius */
+    border-radius: 20px 20px 0 0;
 }
 
 .product-info {
@@ -215,8 +218,6 @@ footer {
     margin: 5px 0;
 }
 
-/* Updated CSS for image slider */
-
 .image-slider {
     display: flex;
     overflow: hidden;
@@ -233,4 +234,54 @@ footer {
 
 .product-image.next {
     transform: translateX(100%);
+}
+
+/* Media Queries */
+
+/* Tablets and smaller devices */
+@media screen and (max-width: 768px) {
+    nav {
+        max-width: 100%;
+        float: none;
+        text-align: center;
+    }
+    
+    nav a {
+        display: block;
+        margin: 10px 0;
+        font-size: 16px;
+    }
+
+    .search-container {
+        margin-bottom: 20px;
+        width: 100%;
+        text-align: center;
+    }
+
+    .search-container input[type="text"] {
+        width: 80%;
+    }
+}
+
+/* Mobile devices */
+@media screen and (max-width: 480px) {
+    header h1 {
+        font-size: 28px;
+    }
+    
+    nav a {
+        font-size: 14px;
+    }
+
+    .product {
+        width: 100%;
+    }
+
+    .product-info h2 {
+        font-size: 20px;
+    }
+
+    .price {
+        font-size: 18px;
+    }
 }
