--- a/diwaliprojects/weather cards/style.css
+++ b/diwaliprojects/weather cards/style.css
@@ -25,31 +25,38 @@ body {
     justify-content: space-between;
     position: relative;
     overflow: hidden;
+    border: 0px solid black;
 }
 
 .weather-card h3 {
     font-size: 1rem;
     margin: 0;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 
 .weather-card h1 {
     font-size: 2.5rem;
     margin: 0;
+
 }
 
 .weather-card img {
     width: 50px;
     height: 50px;
+
 }
 
 .cloudy {
-    background: linear-gradient(to bottom, #4a90e2, #274d7b);
+    background-image: url(image.png);
+
 }
 
 .raining {
-    background: linear-gradient(to bottom, #3b3f72, #1e2749);
+    background-image: url(raining\ image.png);
 }
 
 .cold {
-    background: linear-gradient(to bottom, #4c69b3, #2b3c7f);
+    background-image: url(cold\ image.png);
 }
