--- a/diwaliprojects/weather cards/style.css
+++ b/diwaliprojects/weather cards/style.css
@@ -6,11 +6,17 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    flex-direction: column;
+    background-image: linear-gradient(to bottom left, rgb(16, 16, 83), rgb(75, 12, 98));
+
 }
 
 .weather-container {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
+    margin: 20px;
 }
 
 .weather-card {
@@ -33,24 +39,20 @@ body {
     margin: 0;
     color: black;
     font-family: 'Times New Roman', Times, serif;
-
 }
 
 .weather-card h1 {
     font-size: 2.5rem;
     margin: 0;
-
 }
 
 .weather-card img {
     width: 50px;
     height: 50px;
-
 }
 
 .cloudy {
     background-image: url(image.png);
-
 }
 
 .raining {
@@ -59,4 +61,32 @@ body {
 
 .cold {
     background-image: url(cold\ image.png);
+}
+
+@media (max-width: 368px) {
+    .weather-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .weather-card {
+        width: 90%;
+        max-width: 450px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .weather-card h1 {
+        font-size: 2rem;
+    }
+
+    .weather-card h3 {
+        font-size: 0.9rem;
+    }
+
+    .weather-card img {
+        width: 40px;
+        height: 40px;
+    }
 }
